--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -99,7 +99,7 @@ items:
       - name: Distribuerad spårning
         href: app/distributed-tracing.md
       - name: Loggbaserade och föraggregerade mått
-        href: ../application-insights/pre-aggregated-metrics-log-metrics.md?toc=/azure/azure-monitor/toc.json
+        href: app/pre-aggregated-metrics-log-metrics.md
     - name: Containrar
       href: insights/container-insights-overview.md
     - name: Virtuella datorer
@@ -289,7 +289,7 @@ items:
         - name: Diagnostik
           href: ../application-insights/app-insights-azure-diagnostics.md?toc=/azure/azure-monitor/toc.json
         - name: Förhandsgranskningar
-          href: ../application-insights/app-insights-previews.md?toc=/azure/azure-monitor/toc.json
+          href: app/previews.md
       - name: ASP.NET-appar
         items:
         - name: Webbappar
@@ -308,7 +308,7 @@ items:
         - name: Konsolen
           href: app/console.md
         - name: Instrumentpanel för program
-          href: ../application-insights/app-insights-overview-dashboard.md?toc=/azure/azure-monitor/toc.json
+          href: app/overview-dashboard.md
         - name: Hämta mer telemetri
           href: app/asp-net-more.md
         - name: Undantag
@@ -316,7 +316,7 @@ items:
         - name: Loggspårningar
           href: app/asp-net-trace-logs.md
         - name: Prestandaräknare
-          href: ../application-insights/app-insights-performance-counters.md?toc=/azure/azure-monitor/toc.json
+          href: app/performance-counters.md
         - name: Beroenden
           href: app/asp-net-dependencies.md
         - name: Versionsanteckningar
@@ -346,7 +346,7 @@ items:
       - name: Node.js-appar
         items:
         - name: Node.js
-          href: ../application-insights/app-insights-nodejs.md?toc=/azure/azure-monitor/toc.json
+          href: app/nodejs.md
       - name: Webbsidor
         items:
         - name: JavaScript
@@ -356,11 +356,11 @@ items:
       - name: Distribuerad spårning
         items:
         - name: Lokal vidarebefordrare
-          href: ../application-insights/opencensus-local-forwarder.md?toc=/azure/azure-monitor/toc.json
+          href: app/opencensus-local-forwarder.md
         - name: Python
-          href: ../application-insights/opencensus-python.md?toc=/azure/azure-monitor/toc.json
+          href: app/opencensus-python.md
         - name: Go
-          href: ../application-insights/opencensus-go.md?toc=/azure/azure-monitor/toc.json
+          href: app/opencensus-go.md
       - name: Andra plattformar
         items:
         - name: SharePoint-webbplatser
@@ -383,11 +383,11 @@ items:
         - name: Resursutnyttjande
           href: ../application-insights/app-insights-proactive-low-utilization-cloud-resources.md?toc=/azure/azure-monitor/toc.json
         - name: Säkerhetsidentifiering
-          href: ../application-insights/app-insights-proactive-application-security-detection-pack.md?toc=/azure/azure-monitor/toc.json
+          href: app/proactive-application-security-detection-pack.md
         - name: Azure Cloud Services
-          href: ../application-insights/app-insights-proactive-cloud-services.md?toc=/azure/azure-monitor/toc.json
+          href: app/proactive-cloud-services.md
         - name: Hantera regler för smart identifiering
-          href: ../application-insights/app-insights-proactive-arm-config.md?toc=/azure/azure-monitor/toc.json
+          href: app/proactive-arm-config.md
       - name: Skapa en resurs
         href: ../application-insights/app-insights-create-new-resource.md?toc=/azure/azure-monitor/toc.json
       - name: Felsöka
@@ -472,9 +472,9 @@ items:
         - name: Search
           href: app/diagnostic-search.md
         - name: Mått
-          href: ../application-insights/app-insights-metrics-explorer.md?toc=/azure/azure-monitor/toc.json
+          href: app/metrics-explorer.md
         - name: Direktsänd ström
-          href: ../application-insights/app-insights-live-stream.md?toc=/azure/azure-monitor/toc.json
+          href: app/live-stream.md
         - name: Programkarta
           href: app/app-map.md
         - name: Transaktionsdiagnostik
@@ -830,7 +830,7 @@ items:
     - name: Användning och uppskattade kostnader
       href: platform/usage-estimated-costs.md
     - name: Programanvändning och -kostnader
-      href: ../application-insights/app-insights-pricing.md?toc=/azure/azure-monitor/toc.json
+      href: app/pricing.md
     - name: Logga dataanvändning och -kostnader
       href: platform/manage-cost-storage.md
   - name: Automatisera
@@ -844,13 +844,13 @@ items:
       - name: Program
         items:
         - name: Skapa Application Insights-resurser
-          href: ../application-insights/app-insights-powershell.md?toc=/azure/azure-monitor/toc.json
+          href: app/powershell.md
         - name: Skapa resurser
-          href: ../application-insights/app-insights-powershell-script-create-resource.md?toc=/azure/azure-monitor/toc.json
+          href: app/powershell-script-create-resource.md
         - name: Ange aviseringar
-          href: ../application-insights/app-insights-powershell-alerts.md?toc=/azure/azure-monitor/toc.json
+          href: app/powershell-alerts.md
         - name: Hämta Azure Diagnostics
-          href: ../application-insights/app-insights-powershell-azure-diagnostics.md?toc=/azure/azure-monitor/toc.json
+          href: app/powershell-azure-diagnostics.md
     - name: Azure CLI-exempel
       href: platform/cli-samples.md
     - name: Mallar för Resurshanteraren
@@ -908,7 +908,7 @@ items:
     - name: NuGet-paket
       href: ../application-insights/app-insights-nuget.md?toc=/azure/azure-monitor/toc.json
     - name: Plattformssupport
-      href: ../application-insights/app-insights-platforms.md?toc=/azure/azure-monitor/toc.json
+      href: app/platforms.md
   - name: Application Insights-datamodell
     items:
     - name: Översikt
@@ -1004,9 +1004,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: 1b80318e470995d060467f42aa61cdf6f4e8f34b
-ms.sourcegitcommit: 803e66de6de4a094c6ae9cde7b76f5f4b622a7bb
+ms.openlocfilehash: 89f30238656021e02fe36fe3e0fede0bc0988cae
+ms.sourcegitcommit: da69285e86d23c471838b5242d4bdca512e73853
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/02/2019
-ms.locfileid: "53974581"
+ms.lasthandoff: 01/03/2019
+ms.locfileid: "54002135"
