--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -9,8 +9,12 @@ items:
   items:
   - name: Skapa en tjänst
     href: search-create-service-portal.md
-  - name: Kognitiv sökning
-    href: cognitive-search-quickstart-blob.md
+  - name: Portalen
+    items:
+    - name: Importera – Indexera – Search
+      href: search-get-started-portal.md
+    - name: Kognitiv sökning
+      href: cognitive-search-quickstart-blob.md
   - name: .NET
     items:
     - name: Skapa ett index
@@ -32,8 +36,6 @@ items:
   expanded: true
 - name: Självstudier
   items:
-  - name: Använda verktyg på Azure-portalen
-    href: search-get-started-portal.md
   - name: Lär dig kognitiva sök-API:er
     href: cognitive-search-tutorial-blob.md
   - name: Indexera Azure-blobbar
@@ -285,9 +287,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: 901db48ea082a7de7179632f3a53043ef1e5cf23
-ms.sourcegitcommit: 549070d281bb2b5bf282bc7d46f6feab337ef248
+ms.openlocfilehash: 4bf8c36945d1a02d87ca6b0602de14d7f9694594
+ms.sourcegitcommit: da69285e86d23c471838b5242d4bdca512e73853
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "53717712"
+ms.lasthandoff: 01/03/2019
+ms.locfileid: "53999398"
