--- a/articles/jenkins/index.yml
+++ b/articles/jenkins/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: cd539e1ba1b740155a22960645c3947d7c4d8176
-ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
+ms.openlocfilehash: e94a667cb67e4812984d4a338e763ebeaa1d3205
+ms.sourcegitcommit: fbf0124ae39fa526fc7e7768952efe32093e3591
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43666533"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "54073228"
 documentType: LandingData
 title: Jenkins på Azure
 metadata:
@@ -12,7 +12,7 @@ metadata:
   description: Distribuera och integrera Jenkins med Azure
   ms.service: jenkins
   keywords: jenkins, azure, devops, självstudier, exempel, referenser
-  author: tomarcher
+  author: tomarchermsft
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing-page
