--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -1,5 +1,5 @@
 items:
-- name: Dokumentation om Azure Machine Learning
+- name: Dokumentation om Azure Machine Learning-tjänsten
   href: index.yml
 - name: Översikt
   items:
@@ -370,9 +370,9 @@ items:
       href: ../desktop-workbench/frequently-asked-questions.md
     - name: Äldre problem
       href: ../desktop-workbench/known-issues-and-troubleshooting-guide.md
-ms.openlocfilehash: cf7216271dea4bcdda7bea91c1b386a4ba612f8f
-ms.sourcegitcommit: eb9dd01614b8e95ebc06139c72fa563b25dc6d13
+ms.openlocfilehash: 4af9d970fe07370200d9c6472366ea3dab16a76c
+ms.sourcegitcommit: fbf0124ae39fa526fc7e7768952efe32093e3591
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/12/2018
-ms.locfileid: "53310519"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "54079229"
