--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -443,6 +443,11 @@ items:
         href: service-fabric-tutorial-deploy-api-management.md
       - name: Hantera programhemligheter
         href: service-fabric-application-secret-management.md
+        items:
+        - name: Konfigurera ett krypteringscertifikat och kryptera hemligheter på Windows
+          href: service-fabric-application-secret-management-windows.md
+        - name: Konfigurera ett krypteringscertifikat och kryptera hemligheter på Linux
+          href: service-fabric-application-secret-management-linux.md
       - name: Konfigurera omvänd proxy för säker kommunikation
         href: service-fabric-reverseproxy-configure-secure-communication.md
       - name: Köra skript för start av tjänster som ett lokalt konto för användaren eller systemet
@@ -820,9 +825,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: 9058ac3b7d21b7cd490a14333d2362635809e39b
-ms.sourcegitcommit: 803e66de6de4a094c6ae9cde7b76f5f4b622a7bb
+ms.openlocfilehash: d26041aaaa9a83888d3eb5a3a35b1686b58ef95f
+ms.sourcegitcommit: 3ab534773c4decd755c1e433b89a15f7634e088a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/02/2019
-ms.locfileid: "53976383"
+ms.lasthandoff: 01/07/2019
+ms.locfileid: "54064309"
