--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -130,7 +130,7 @@ items:
     - name: Kontinuerlig integrering med Azure DevOps Services
       href: ../vs-azure-tools-resource-groups-ci-in-vsts.md
       maintainContext: true
-  - name: Hantera mallar
+  - name: Hantera resurser
     items:
     - name: Hantera med hjälp av Azure-portalen
       href: resource-group-portal.md
@@ -153,6 +153,8 @@ items:
       href: programmatically-create-subscription.md
     - name: Bevilja åtkomst för att skapa EA-prenumerationer
       href: grant-access-to-create-subscription.md
+    - name: Autentisera mellan klienter
+      href: authenticate-multi-tenant.md
   - name: Granska distributioner
     items:
     - name: Visa aktivitetsloggar
@@ -239,14 +241,14 @@ items:
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=azure-resource-manager
   - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-resource-manager
+    href: https://stackoverflow.com/questions/tagged/azure-resource-manager
   - name: Hantera personliga data
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 3cdd48bf83de29a294c5c4b7bcebc6caf36862d5
-ms.sourcegitcommit: 21466e845ceab74aff3ebfd541e020e0313e43d9
+ms.openlocfilehash: 9a33d74e88f169438bee554707bbfc8264faf256
+ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "53742447"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "54106434"
