--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -302,6 +302,8 @@ items:
       items:
       - name: Hantera meddelanden mellan enheter och molnet med Azure IoT-verktyg för VS Code
         href: iot-hub-vscode-iot-toolkit-cloud-device-messaging.md
+      - name: Hantera meddelanden mellan moln och enheter med Cloud Explorer för Visual Studio
+        href: iot-hub-visual-studio-cloud-device-messaging.md
       - name: Datavisualisering i Power BI
         href: iot-hub-live-data-visualization-in-power-bi.md
       - name: Datavisualisering med Web Apps
@@ -310,6 +312,8 @@ items:
         href: iot-hub-weather-forecast-machine-learning.md
       - name: Enhetshantering med Azure IoT-verktyg för VS Code
         href: iot-hub-device-management-iot-toolkit.md
+      - name: Enhetshantering med Cloud Explorer för Visual Studio
+        href: iot-hub-device-management-visual-studio.md
       - name: Enhetshantering med IoT-tillägg för Azure CLI
         href: iot-hub-device-management-iot-extension-azure-cli-2-0.md
       - name: Fjärrövervakning och aviseringar med Logic Apps
@@ -412,9 +416,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 09ae29bcfa6c9941f32c4892d30369ba2183cce7
-ms.sourcegitcommit: d61faf71620a6a55dda014a665155f2a5dcd3fa2
+ms.openlocfilehash: 4cab0750e1e0a9c71a4323f28147d1963080c138
+ms.sourcegitcommit: 30d23a9d270e10bb87b6bfc13e789b9de300dc6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/04/2019
-ms.locfileid: "54052980"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "54107386"
