--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -19,7 +19,13 @@ items:
   items:
   - name: 1 – Skapa B2C-klient
     href: tutorial-create-tenant.md
-  - name: 2 – Autentisera konton
+  - name: 2 – Registrera program
+    href: tutorial-register-applications.md
+  - name: 3 – Skapa användarflöden
+    href: tutorial-create-user-flows.md
+  - name: 4 – Anpassa gränssnittet
+    href: tutorial-customize-ui.md
+  - name: Autentisera konton
     items:
     - name: ASP.NET
       href: active-directory-b2c-tutorials-web-app.md
@@ -27,7 +33,7 @@ items:
       href: active-directory-b2c-tutorials-desktop-app.md
     - name: En sida
       href: active-directory-b2c-tutorials-spa.md
-  - name: 3 – Bevilja API-åtkomst
+  - name: Bevilja API-åtkomst
     items:
     - name: ASP.NET
       href: active-directory-b2c-tutorials-web-api.md
@@ -35,8 +41,6 @@ items:
       href: active-directory-b2c-tutorials-desktop-app-webapi.md
     - name: En sida
       href: active-directory-b2c-tutorials-spa-webapi.md
-  - name: Anpassa användargränssnittet
-    href: tutorial-customize-ui.md
 - name: Exempel
   href: code-samples.md
 - name: Begrepp
@@ -45,16 +49,12 @@ items:
     href: active-directory-b2c-apps.md
   - name: Autentiseringsprotokoll
     href: active-directory-b2c-reference-protocols.md
-  - name: Användarflöden
-    href: active-directory-b2c-reference-policies.md
   - name: Identity Experience Framework
     items:
     - name: Anpassade principer
       href: active-directory-b2c-overview-custom.md
     - name: Användaråtkomst
       href: manage-user-access.md
-    - name: Användardata
-      href: manage-user-data.md
   - name: OAuth 2.0
     href: active-directory-b2c-reference-oauth-code.md
   - name: OpenId Connect
@@ -65,6 +65,10 @@ items:
     href: active-directory-b2c-reference-tokens.md
   - name: Användarkonton
     href: user-overview.md
+  - name: Användardata
+    href: manage-user-data.md
+  - name: Användarflöden
+    href: active-directory-b2c-reference-policies.md
   - name: Anpassning av användargränssnitt
     href: customize-ui-overview.md
 - name: Instruktionsguider
@@ -264,8 +268,6 @@ items:
     href: active-directory-b2c-access-tokens.md
   - name: Skicka genom åtkomsttoken
     href: idp-pass-through-user-flow.md
-  - name: Registrera ditt program
-    href: active-directory-b2c-app-registration.md
   - name: Rapportanvändning
     href: active-directory-b2c-reference-usage-reporting-api.md
   - name: Autentiseringsuppgifter för lösenord för resursägare
@@ -316,9 +318,9 @@ items:
     href: active-directory-b2c-support.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory-b2c
-ms.openlocfilehash: b8a8db0dc15877cc772efbb1e9656c12f27f426a
-ms.sourcegitcommit: 295babdcfe86b7a3074fd5b65350c8c11a49f2f1
+ms.openlocfilehash: c7f7036e52c5c9d0f9d7c51a882474028ba63aef
+ms.sourcegitcommit: f4b78e2c9962d3139a910a4d222d02cda1474440
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/27/2018
-ms.locfileid: "53788291"
+ms.lasthandoff: 01/12/2019
+ms.locfileid: "54244400"
