--- a/articles/cloudfoundry/toc.yml
+++ b/articles/cloudfoundry/toc.yml
@@ -12,6 +12,8 @@ items:
     href: /azure/cloudfoundry/create-cloud-foundry-on-azure
   - name: Distribuera CF-app till Azure
     href: /azure/virtual-machines/linux/cloudfoundry-deploy-your-first-app
+  - name: Använda OSBA med en app på PCF
+    href: /azure/cloudfoundry/use-osba-pcf-app
   - name: CloudFoundry på Azure
     href: /azure/virtual-machines/linux/cloudfoundry-get-started
   - name: Distribuera CF OMS Nozzle
@@ -30,9 +32,9 @@ items:
     href: https://pivotal.io/partners/microsoft
   - name: Azure DevOps-pluginprogram för CF
     href: https://github.com/Microsoft/vsts-cloudfoundry
-ms.openlocfilehash: fbee87e506752878aaeb95d9286499881ae1c40a
-ms.sourcegitcommit: f58fc4748053a50c34a56314cf99ec56f33fd616
+ms.openlocfilehash: b702d42142bd809e678792f1f07a3e104f1e21c1
+ms.sourcegitcommit: a512360b601ce3d6f0e842a146d37890381893fc
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/04/2018
-ms.locfileid: "48268250"
+ms.lasthandoff: 01/11/2019
+ms.locfileid: "54229225"
