--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -21,7 +21,12 @@ metadata:
   ms.date: 09-24-2018
   ms.author: juliako
 abstract:
-  description: Azure Media Services (AMS) är en molnbaserad plattform för att skapa lösningar för högupplöst videokodning och sändningskvalitet för direktuppspelning som når din publik på de flesta populära enheter. Med AMS v3 kan du även extrahera insikter från dina video- och ljudfiler med Video Indexer med hjälp av analysförinställningar för AMS v3. Använd Video Indexer direkt om du vill få mer detaljerade insikter.<br/> Mer information om när du bör använda analysförinställningar för Video Indexer eller Media Services finns i <a href="/azure/media-services/video-indexer/compare-video-indexer-with-media-services-presets">jämförelsedokumentet</a>.
+  description: >-
+    Azure Media Services (AMS) är en molnbaserad plattform
+
+    du kan använda för att skapa lösningar för
+
+    högupplöst videokodning och direktuppspelning i sändningskvalitet som din publik kan spela upp på de flesta populära enheterna. Med AMS v3 kan du även indexera informationen från i video- och ljudfiler med Video Indexer genom att använda analysförinställningar för AMS v3. Använd Video Indexer direkt för att indexera mer detaljerad information.<br/> Mer information om när du bör använda analysförinställningar för Video Indexer eller Media Services finns i <a href="/azure/media-services/video-indexer/compare-video-indexer-with-media-services-presets">jämförelsedokumentet</a>.
 sections:
 - items:
   - type: list
@@ -30,17 +35,17 @@ sections:
     columns: 3
     items:
     - href: /azure/media-services/latest/
-      html: <p>Lär dig mer om att koda, strömma på begäran, sända live och analysera dina videor med Media Services v3.</p>
+      html: <p>Lär dig att koda, strömma på begäran, sända live och analysera dina videor med Media Services v3.</p>
       image:
         src: media/index/AMSIcons-media_servicesV3.svg
       title: Azure Media Services v3
     - href: /azure/media-services/previous/
-      html: <p>Lär dig mer om att koda, strömma på begäran och sända videor live med Media Services v2.</p>
+      html: <p>Lär dig att koda, strömma på begäran och sända videor live med Media Services v2.</p>
       image:
         src: media/index/AMSIcons-media_servicesV2.svg
       title: Azure Media Services v2 (äldre version)
     - href: /azure/media-services/video-indexer/
-      html: <p>Lär dig att extrahera insikter från dina video- och ljudfiler med Video Indexer.</p>
+      html: <p>Lär dig att indexera information i video- och ljudfiler med Video Indexer.</p>
       image:
         src: media/index/AMSIcons-media_analytics.svg
       title: Video Indexer
@@ -56,13 +61,13 @@ sections:
       text: Strömma filer
       href: /azure/media-services/latest/stream-files-dotnet-quickstart
   - type: paragraph
-    text: 'Lär dig att extrahera insikter från dina videor med Video Indexer:'
+    text: 'Lär dig att indexera information i videor med Video Indexer:'
   - type: list
     style: icon48
     items:
     - image:
         src: media/index/AMSIcons-media_analytics.svg
-      text: Extrahera insikter
+      text: Indexera information
       href: ../cognitive-services/video-indexer/video-indexer-get-started.md?toc=/azure/media-services/video-indexer/toc.json&bc=/azure/media-services/video-indexer/breadcrumb/toc.json
 - title: Steg för steg-självstudier
   items:
@@ -84,11 +89,11 @@ sections:
       text: Analysera dina videor
       href: /azure/media-services/latest/analyze-videos-tutorial-with-api
   - type: paragraph
-    text: 'Lär dig att extrahera insikter från dina videor med Video Indexer-API:et:'
+    text: 'Lär dig att indexera information i dina videor med Video Indexer-API:et:'
   - type: list
     style: icon48
     items:
     - image:
         src: media/index/AMSIcons-media_analytics.svg
-      text: Extrahera insikter
+      text: Indexera information
       href: ../cognitive-services/video-indexer/video-indexer-use-apis.md?toc=/azure/media-services/video-indexer/toc.json&bc=/azure/media-services/video-indexer/breadcrumb/toc.json
